Ticket #28695: Added selection filter to tree, grid, and tree grids.

--- a/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
@@ -1060,6 +1060,10 @@ com.top_logic.model.search.providers.ScriptValueNaming$Name = Name
 com.top_logic.model.search.providers.ScriptValueNaming$Name.tooltip = Configuration options for <i>script value naming</i>.
 com.top_logic.model.search.providers.ScriptValueNaming.Name.expr = Expression
 com.top_logic.model.search.providers.ScriptValueNaming.Name.expr.tooltip = The expression to evaluate to retrieve the value.
+com.top_logic.model.search.providers.ScriptedFilter = Scripted filter
+com.top_logic.model.search.providers.ScriptedFilter.Config.predicate = Predicate
+com.top_logic.model.search.providers.ScriptedFilter.Config.predicate.tooltip = The function deciding whether the argument is accepted.
+com.top_logic.model.search.providers.ScriptedFilter.tooltip = <i>Filter</i> that can be configured dynamically using TL-Script.
 com.top_logic.model.search.providers.SecurityObjectByExpression = Security object by expression
 com.top_logic.model.search.providers.SecurityObjectByExpression.Config.function = Function
 com.top_logic.model.search.providers.SecurityObjectByExpression.Config.function.tooltip = Function that computes the security object from the given model. <p> The function is expected to accept one parameter, the model for which a security object is required. It must return the security object for the given model. </p>
