--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -6380,10 +6380,12 @@ com.top_logic.layout.xml.LayoutControlComponent.Config.componentName = Component
 com.top_logic.layout.xml.LayoutControlComponent.Config.componentName.tooltip = Name of the component to render with the configured <i>layout control provider</i>
 com.top_logic.layout.xml.LayoutControlComponent.tooltip = Workaround <i>component</i> to configure to render another <i>component</i> using a separate <i>layout control provider</i>. <p> Can also be used as dummy component displaying a custom control created by a <i>layout control provider</i>. In case, a simple <i>HTML fragment</i> should be rendered, a <i>layout view provider</i> can be used with an inner <i>view configuration</i>. </p>
 com.top_logic.mig.html.DefaultSelectionModelFactory = Default selection model factory
-com.top_logic.mig.html.DefaultSelectionModelFactory.Config.filter = Filter
-com.top_logic.mig.html.DefaultSelectionModelFactory.Config.filter.tooltip = Returns the selection filter for the created <i>selection model</i>.
-com.top_logic.mig.html.DefaultSelectionModelFactory.Config.multiple = Multiple
-com.top_logic.mig.html.DefaultSelectionModelFactory.Config.multiple.tooltip = Whether the created <i>selection model</i> must support multiple selection.
+com.top_logic.mig.html.DefaultSelectionModelFactory$UIOptions = UI options
+com.top_logic.mig.html.DefaultSelectionModelFactory$UIOptions.tooltip = Options of <i>default selection model factory</i> that can be configured in the layout editor.
+com.top_logic.mig.html.DefaultSelectionModelFactory.UIOptions.multiSelection = Multiple selection
+com.top_logic.mig.html.DefaultSelectionModelFactory.UIOptions.multiSelection.tooltip = Whether multiple value can be selected.
+com.top_logic.mig.html.DefaultSelectionModelFactory.UIOptions.selectionFilter = Selection filter
+com.top_logic.mig.html.DefaultSelectionModelFactory.UIOptions.selectionFilter.tooltip = Filter that decides, whether some value can be selected. <p> Only values, that are accepted by the filter can be selected. </p>
 com.top_logic.mig.html.DefaultSelectionModelFactory.tooltip = <i>Selection model factory</i> that creates "default" <i>selection models</i>.
 com.top_logic.mig.html.FilteringListModelBuilder = Filtering list model builder
 com.top_logic.mig.html.FilteringListModelBuilder.Config.filter = Filter
@@ -6437,6 +6439,8 @@ com.top_logic.mig.html.SelectionNaming$Name = Name
 com.top_logic.mig.html.SelectionNaming$Name.tooltip = Name of the selection of a <i>selection model</i>
 com.top_logic.mig.html.SelectionNaming.Name.selection-model = Selection model
 com.top_logic.mig.html.SelectionNaming.Name.selection-model.tooltip = Name of the <i>selection model</i>.
+com.top_logic.mig.html.TreeSelectionModelFactory = Tree selection model factory
+com.top_logic.mig.html.TreeSelectionModelFactory.tooltip = <i>Default selection model factory</i> that unwraps <i>tree nodes</i> before passing the nodes to the configured filter.
 com.top_logic.mig.html.layout.AbstractWindowInfo.createOpenerButtons = Create opener buttons
 com.top_logic.mig.html.layout.AbstractWindowInfo.createOpenerButtons.tooltip = Whether the <i>Open handler</i> should be visible as button. <p> If the value is <code>false</code>, the dialog cannot be directly opened by the user. In that case, an open handler must be configured in some other component to open the dialog. </p>
 com.top_logic.mig.html.layout.AbstractWindowInfo.disabledImage.tooltip = The icon to use for the opening command, if the dialog cannot be opened.
