Ticket #28695: Added selection filter to tree, grid, and tree grids.

--- a/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
@@ -1069,6 +1069,10 @@ com.top_logic.model.search.providers.ScriptValueNaming$Name = Name
 com.top_logic.model.search.providers.ScriptValueNaming$Name.tooltip = Konfigurationsoptionen für die <i>Benennung von Skriptwerten</i>.
 com.top_logic.model.search.providers.ScriptValueNaming.Name.expr = Ausdruck
 com.top_logic.model.search.providers.ScriptValueNaming.Name.expr.tooltip = Der Ausdruck, der ausgewertet werden soll, um den Wert abzurufen.
+com.top_logic.model.search.providers.ScriptedFilter = Skriptgesteuerter Filter
+com.top_logic.model.search.providers.ScriptedFilter.Config.predicate = Prädikat
+com.top_logic.model.search.providers.ScriptedFilter.Config.predicate.tooltip = Die Funktion, die entscheidet, ob das Argument akzeptiert wird.
+com.top_logic.model.search.providers.ScriptedFilter.tooltip = <i>Filter</i>, der mit TL-Script dynamisch konfiguriert werden kann.
 com.top_logic.model.search.providers.SecurityObjectByExpression = Berechtigungsobjekt über TL-Script
 com.top_logic.model.search.providers.SecurityObjectByExpression.Config.function = Funktion
 com.top_logic.model.search.providers.SecurityObjectByExpression.Config.function.tooltip = Funktion, die das Berechtigungsobjekt aus dem angegebenen Modell berechnet. <p> Es wird erwartet, dass die Funktion einen Parameter akzeptiert, nämlich das Modell, für das ein Berechtigungsobjekt benötigt wird. Sie muss das Berechtigungsobjekt für das angegebene Modell zurückgeben. </p>
