--- a/com.top_logic.element/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_de.properties
@@ -513,6 +513,8 @@ com.top_logic.element.layout.grid.GridCreateHandler.tooltip = Schaltfläche zum E
 com.top_logic.element.layout.grid.GridExcelExportHandler = Grid-Excel-Export-Handler
 com.top_logic.element.layout.grid.GridExcelExportHandler.Config.executability.tooltip = Im Gegensatz zum <i>Excel-Export-Handler</i> kann dieser Handler verwendet werden, wenn kein Modell vorhanden ist, da er nicht zum Erstellen von Exportwerten benötigt wird. Außerdem kann er im Bearbeitungsmodus verwendet werden.
 com.top_logic.element.layout.grid.GridExcelExportHandler.tooltip = Ermöglicht den Export auch dann, wenn kein Modell vorhanden ist, da nicht jede Gitterkomponente ein Modell benötigt.
+com.top_logic.element.layout.grid.GridSelectionModelFactory = Grid-Selektionsmodellfabrik
+com.top_logic.element.layout.grid.GridSelectionModelFactory.tooltip = <i>Voreingestellte Selektionsmodellfabrik</i>, die Gitterzeilen auspackt, bevor die Knoten an den konfigurierten Filter übergeben werden.
 com.top_logic.element.layout.grid.GridTableConfig = Gittertabellen-Konfiguration
 com.top_logic.element.layout.grid.GridTableConfig.tooltip = <i>Formulartabellenkonfiguration</i> mit Voreinstellungen für die <i>Gitterkomponente</i>.
 com.top_logic.element.layout.grid.GridTreeTableNode$GridTreeTableNodeNaming$GridNodeName = Name des Gitterknotens
