--- a/com.top_logic.element/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_en.properties
@@ -513,6 +513,8 @@ com.top_logic.element.layout.grid.GridCreateHandler.tooltip = Button to create a
 com.top_logic.element.layout.grid.GridExcelExportHandler = Grid Excel export handler
 com.top_logic.element.layout.grid.GridExcelExportHandler.Config.executability.tooltip = In contrast to <i>Excel export handler</i> this handler can be used when no model exists, as it is not needed to create export values. Moreover it can be used in edit mode.
 com.top_logic.element.layout.grid.GridExcelExportHandler.tooltip = Allows export even if there is no model as not every grid component needs a model.
+com.top_logic.element.layout.grid.GridSelectionModelFactory = Grid selection model factory
+com.top_logic.element.layout.grid.GridSelectionModelFactory.tooltip = <i>Default selection model factory</i> that unwraps grid rows before passing the nodes to the configured filter.
 com.top_logic.element.layout.grid.GridTableConfig = Grid table configuration
 com.top_logic.element.layout.grid.GridTableConfig.tooltip = <i>Form table configuration</i> with defaults for <i>grid component</i>.
 com.top_logic.element.layout.grid.GridTreeTableNode$GridTreeTableNodeNaming$GridNodeName = Grid node name
