--- a/com.top_logic.demo/src/main/webapp/WEB-INF/conf/resources/model.test.dynamicmode.messages_en.properties
+++ b/com.top_logic.demo/src/main/webapp/WEB-INF/conf/resources/model.test.dynamicmode.messages_en.properties
@@ -10,6 +10,7 @@ model.test.dynamicmode.Acquisition.price = Base price
 model.test.dynamicmode.Acquisition.price.tooltip = The basic price of the project. If the sum of the basic price and the values of all individual items exceeds \u20AC10,000, a justification must be entered.
 model.test.dynamicmode.Acquisition.reason = Reason
 model.test.dynamicmode.Acquisition.reason.tooltip = As soon as the total value of the purchase exceeds \u20AC10,000, a justification for the purchase must be submitted. The total value is made up of the basic price and the values of all individual items.
+model.test.dynamicmode.Acquisition.reasonCritical = Reason criticality
 model.test.dynamicmode.Acquisition.totalPositions = Total positions
 model.test.dynamicmode.Acquisition.totalPositions.tooltip = The sum of the values of the individual items. The value is only displayed if there are items.
 model.test.dynamicmode.Category = Category
