Ticket #25918: Allow to add tooltips to diagram elements.
Currently, only plain-text tooltips are supported due to client-side
rendering of diagram elements.

--- a/com.top_logic.graphic.blocks/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.graphic.blocks/src/main/java/META-INF/messages_de.properties
@@ -132,6 +132,8 @@ com.top_logic.graphic.flow.data.Widget.TypeKind.STACK = Stapel
 com.top_logic.graphic.flow.data.Widget.TypeKind.STACK.tooltip = Typ Literal für <i>Stack</i>.
 com.top_logic.graphic.flow.data.Widget.TypeKind.TEXT = Text
 com.top_logic.graphic.flow.data.Widget.TypeKind.TEXT.tooltip = Geben Sie ein Literal für <i>Text</i> ein.
+com.top_logic.graphic.flow.data.Widget.TypeKind.TOOLTIP = Tooltip
+com.top_logic.graphic.flow.data.Widget.TypeKind.TOOLTIP.tooltip = Typ-Literal für <i>Tooltip</i>.
 com.top_logic.graphic.flow.data.Widget.TypeKind.TREE_CONNECTION = Baumverbindung
 com.top_logic.graphic.flow.data.Widget.TypeKind.TREE_CONNECTION.tooltip = Wörtliche Bezeichnung für die <i>Baumverbindung</i>.
 com.top_logic.graphic.flow.data.Widget.TypeKind.TREE_CONNECTOR = Baumverbinder
