--- a/com.top_logic.graphic.blocks/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.graphic.blocks/src/main/java/META-INF/messages_en.properties
@@ -132,6 +132,8 @@ com.top_logic.graphic.flow.data.Widget.TypeKind.STACK = Stack
 com.top_logic.graphic.flow.data.Widget.TypeKind.STACK.tooltip = Type literal for <i>stack</i>.
 com.top_logic.graphic.flow.data.Widget.TypeKind.TEXT = Text
 com.top_logic.graphic.flow.data.Widget.TypeKind.TEXT.tooltip = Type literal for <i>text</i>.
+com.top_logic.graphic.flow.data.Widget.TypeKind.TOOLTIP = Tooltip
+com.top_logic.graphic.flow.data.Widget.TypeKind.TOOLTIP.tooltip = Type literal for <i>tooltip</i>.
 com.top_logic.graphic.flow.data.Widget.TypeKind.TREE_CONNECTION = Tree connection
 com.top_logic.graphic.flow.data.Widget.TypeKind.TREE_CONNECTION.tooltip = Type literal for <i>tree connection</i>.
 com.top_logic.graphic.flow.data.Widget.TypeKind.TREE_CONNECTOR = Tree connector
