--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -6382,6 +6382,10 @@ com.top_logic.layout.xml.LayoutControlComponent.tooltip = <i>Workaround-Komponen
 com.top_logic.mig.html.DefaultSelectionModelFactory = Standardauswahl Modellfabrik
 com.top_logic.mig.html.DefaultSelectionModelFactory$UIOptions = UI-Optionen
 com.top_logic.mig.html.DefaultSelectionModelFactory$UIOptions.tooltip = Optionen der <i>Standardauswahl Modellfabrik</i>, die im Layout-Editor konfiguriert werden können.
+com.top_logic.mig.html.DefaultSelectionModelFactory.Config.filter = Filter
+com.top_logic.mig.html.DefaultSelectionModelFactory.Config.filter.tooltip = Gibt den Auswahlfilter für das erstellte <i>Auswahlmodell</i> zurück.
+com.top_logic.mig.html.DefaultSelectionModelFactory.Config.multiple = Mehrfachselektion
+com.top_logic.mig.html.DefaultSelectionModelFactory.Config.multiple.tooltip = Ob das erstellte <i>Selektionsmodell</i> eine Mehrfachselektion unterstützen muss.
 com.top_logic.mig.html.DefaultSelectionModelFactory.UIOptions.multiSelection = Mehrfache Auswahl
 com.top_logic.mig.html.DefaultSelectionModelFactory.UIOptions.multiSelection.tooltip = Ob mehrere Werte ausgewählt werden können.
 com.top_logic.mig.html.DefaultSelectionModelFactory.UIOptions.selectionFilter = Auswahlfilter
