--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -6382,6 +6382,10 @@ com.top_logic.layout.xml.LayoutControlComponent.tooltip = Workaround <i>componen
 com.top_logic.mig.html.DefaultSelectionModelFactory = Default selection model factory
 com.top_logic.mig.html.DefaultSelectionModelFactory$UIOptions = UI options
 com.top_logic.mig.html.DefaultSelectionModelFactory$UIOptions.tooltip = Options of <i>default selection model factory</i> that can be configured in the layout editor.
+com.top_logic.mig.html.DefaultSelectionModelFactory.Config.filter = Filter
+com.top_logic.mig.html.DefaultSelectionModelFactory.Config.filter.tooltip = Returns the selection filter for the created <i>selection model</i>.
+com.top_logic.mig.html.DefaultSelectionModelFactory.Config.multiple = Multiple
+com.top_logic.mig.html.DefaultSelectionModelFactory.Config.multiple.tooltip = Whether the created <i>selection model</i> must support multiple selection.
 com.top_logic.mig.html.DefaultSelectionModelFactory.UIOptions.multiSelection = Multiple selection
 com.top_logic.mig.html.DefaultSelectionModelFactory.UIOptions.multiSelection.tooltip = Whether multiple value can be selected.
 com.top_logic.mig.html.DefaultSelectionModelFactory.UIOptions.selectionFilter = Selection filter
