--- a/com.top_logic.layout.formeditor/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.layout.formeditor/src/main/java/META-INF/messages_de.properties
@@ -37,6 +37,8 @@ com.top_logic.layout.formeditor.parts.FormTableDefinition.columns = Kolumnen
 com.top_logic.layout.formeditor.parts.FormTableDefinition.columns.tooltip = Die für die gegebenen <i>Zeilen</i> anzuzeigenden Spalten.
 com.top_logic.layout.formeditor.parts.FormTableDefinition.commands = Befehle
 com.top_logic.layout.formeditor.parts.FormTableDefinition.commands.tooltip = Zusätzliche Befehlsmodelle zur Anzeige in der konfigurierten Tabelle.
+com.top_logic.layout.formeditor.parts.FormTableDefinition.dynamicLabel = Dynamische Beschriftung
+com.top_logic.layout.formeditor.parts.FormTableDefinition.dynamicLabel.tooltip = Ausdruck, der eine dynamische Bezeichnung für die Tabelle auf der Grundlage des Modells erstellt. <p> Wenn dieser Ausdruck konfiguriert ist, hat er Vorrang vor der statischen <i>Bezeichnung</i>. Der Ausdruck erhält zwei Parameter: <ul> <li>Erster Parameter: Das Modellobjekt</li> <li>Zweiter Parameter: Die statische Bezeichnung als <i>Ressourcenschlüssel</i></li> </ul> Der zurückgegebene Wert kann z.B. ein <i>Ressourcenschlüssel</i> oder ein <i>String</i> sein. </p>
 com.top_logic.layout.formeditor.parts.FormTableDefinition.form-field-name = Formularfeldname
 com.top_logic.layout.formeditor.parts.FormTableDefinition.form-field-name.tooltip = Name des Formularfeldes, das für diese Tabelle erstellt wird.
 com.top_logic.layout.formeditor.parts.FormTableDefinition.rows = Reihen
