--- a/com.top_logic.layout.formeditor/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.layout.formeditor/src/main/java/META-INF/messages_en.properties
@@ -37,6 +37,8 @@ com.top_logic.layout.formeditor.parts.FormTableDefinition.columns = Columns
 com.top_logic.layout.formeditor.parts.FormTableDefinition.columns.tooltip = The columns to display for the given <i>Rows</i>.
 com.top_logic.layout.formeditor.parts.FormTableDefinition.commands = Commands
 com.top_logic.layout.formeditor.parts.FormTableDefinition.commands.tooltip = Additional command models to display in the configured table.
+com.top_logic.layout.formeditor.parts.FormTableDefinition.dynamicLabel = Dynamic label
+com.top_logic.layout.formeditor.parts.FormTableDefinition.dynamicLabel.tooltip = Expression creating a dynamic label for the table based on the model. <p> If this expression is configured, it takes precedence over the static <i>Label</i>. The expression receives two parameters: <ul> <li>First parameter: The model object</li> <li>Second parameter: The static label as <i>resource key</i></li> </ul> The returned value can be a <i>resource key</i> or a <i>string</i>, for example. </p>
 com.top_logic.layout.formeditor.parts.FormTableDefinition.form-field-name = Form field name
 com.top_logic.layout.formeditor.parts.FormTableDefinition.form-field-name.tooltip = Name of the form field that is created for this table.
 com.top_logic.layout.formeditor.parts.FormTableDefinition.rows = Rows
