--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -59,6 +59,7 @@ class.com.top_logic.knowledge.gui.layout.person.I18NConstants.CHANGED_THEME_RELO
 class.com.top_logic.knowledge.service.db2.I18NConstants.ACCESS_TO_IMMUTABLE_CONTEXT__ARGS = Illegal modification access. Currently no changes are allowed. Arguments: {0}
 class.com.top_logic.knowledge.service.db2.I18NConstants.DELETE_FAILED_REFERER_HAS_VETO__ITEMS_REFERERS = One of the objects {0} could not be deleted, because it is used by the following objects: {1}
 class.com.top_logic.knowledge.service.migration._27517.I18NConstants.ERROR_PERSON_TABLE_DEFINITION_EXPECTED__ACTUAL_EXPECTED = Error: A definition for the application type "{1}" is expected, but a definition for "{0}" was given.
+class.com.top_logic.layout.I18NConstants.ERROR_TARGET_CONTROL_NOT_FOUND__ID_CMD_ARGS = Target control {0} not found delivering command "{1}" arguments: {2}
 class.com.top_logic.layout.admin.component.I18NConstants.ERROR_NOT_A_GROUP__ELEMENT = The object {0} is not a group.
 class.com.top_logic.layout.basic.I18NConstants.ERROR_UPDATING_EXECUTABILITY__CMD_CMP_MSG = Failed to update command executability of command "{0}" in component "{1}": {2}
 class.com.top_logic.layout.basic.I18NConstants.FAILED_TO_COMPUTE_STATE__MSG = Failed to compute executability state: {0}
