Ticket #25918: Logging: Warn about controls not found on server-side.
This error results in a page reload on client-side, but must be traced
back to a problem on the server. Without this log message, it is even
harder to debug this problem, since the message on the client is
immediately cleared by the page reload.

--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -89,6 +89,7 @@ class.com.top_logic.knowledge.wrap.person.I18NConstants.CREATED_ROOT_ACCOUNT = C
 class.com.top_logic.knowledge.wrap.person.I18NConstants.RESETTING_ROOT_PASSWORD = Resetting password of root account.
 class.com.top_logic.knowledge.wrap.person.I18NConstants.STORED_PERSONAL_CONFIGURATION = Stored personal configuration.
 class.com.top_logic.knowledge.wrap.person.I18NConstants.UPDATED_ACCOUNT_LIST = Updated account list.
+class.com.top_logic.layout.I18NConstants.ERROR_TARGET_CONTROL_NOT_FOUND__ID_CMD_ARGS = Target control {0} not found delivering command "{1}" arguments: {2}
 class.com.top_logic.layout.admin.component.I18NConstants.ERROR_NOT_A_GROUP__ELEMENT = The object {0} is not a group.
 class.com.top_logic.layout.basic.I18NConstants.ERROR_UPDATING_EXECUTABILITY__CMD_CMP_MSG = Failed to update command executability of command "{0}" in component "{1}": {2}
 class.com.top_logic.layout.basic.I18NConstants.FAILED_TO_COMPUTE_STATE__MSG = Failed to compute executability state: {0}
