Ticket #28593: Ensure different ModelName's for different NamingSchemes.

--- a/com.top_logic/src/main/webapp/WEB-INF/conf/resources/Messages_de.properties
+++ b/com.top_logic/src/main/webapp/WEB-INF/conf/resources/Messages_de.properties
@@ -2337,6 +2337,8 @@ com.top_logic.layout.table.model.ColumnConfiguration.DisplayMode.hidden = Option
 com.top_logic.layout.table.model.ColumnConfiguration.DisplayMode.mandatory = Verpflichtend
 com.top_logic.layout.table.model.ColumnConfiguration.DisplayMode.visible = Standardmäßig sichtbar
 com.top_logic.layout.table.provider.ButtonColumnProvider$CommandInTableRowNaming$Name = Kommando {command-id} in Spalte {column-id}
+com.top_logic.layout.table.tree.TreeTableNodeLabelNaming$Name = {foreach(path, " > ")}
+com.top_logic.layout.table.tree.TreeTableNodeLabelNaming$Name.tooltip = <i>Modellname</i> für die <i>Bezeichnung der Knoten in der Baumtabelle</i>.
 com.top_logic.layout.tree.TreeDataName = Baumdaten von {tree-data-owner}
 com.top_logic.layout.tree.breadcrumb.BreadcrumbDataName = Breadcrumb von {breadcrumb-data-owner}
 com.top_logic.layout.tree.model.TLTreeNodeNaming = {name["businessObject"]}
