Ticket #28593: Ensure different ModelName's for different NamingSchemes.

--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -6144,6 +6144,8 @@ com.top_logic.layout.table.tree.TreeTableComponent.Config.table.tooltip = Tree <
 com.top_logic.layout.table.tree.TreeTableComponent.Config.treeBuilder = Tree builder
 com.top_logic.layout.table.tree.TreeTableComponent.Config.treeBuilder.tooltip = <i>Tree builder</i> creating the displayed tree from the business model.
 com.top_logic.layout.table.tree.TreeTableComponent.tooltip = A <i>component</i> for displaying a table with a tree model.
+com.top_logic.layout.table.tree.TreeTableComponentNodeLabelNaming$Name = Name
+com.top_logic.layout.table.tree.TreeTableComponentNodeLabelNaming$Name.tooltip = <i>Model name</i> for the <i>tree table component node label naming</i>.
 com.top_logic.layout.table.tree.TreeTableConfig = Tree table configuration
 com.top_logic.layout.table.tree.TreeTableConfig.tooltip = <i>Form table configuration</i> choosing <i>tree table context menu provider</i> by default.
 com.top_logic.layout.table.tree.TreeTableContextMenuFactory = Tree table context menu factory
@@ -6152,8 +6154,6 @@ com.top_logic.layout.table.tree.TreeTableContextMenuProvider = Tree table contex
 com.top_logic.layout.table.tree.TreeTableContextMenuProvider.tooltip = <i>Selectable context menu provider</i> choosing <i>tree table context menu factory</i> by default.
 com.top_logic.layout.table.tree.TreeTableExpandCollapseAll = Tree table expand collapse all
 com.top_logic.layout.table.tree.TreeTableExpandCollapseAll.tooltip = Expands all nodes in the <i>tree table component</i>.
-com.top_logic.layout.table.tree.TreeTableNodeLabelNaming$Name = {foreach(path, " > ")}
-com.top_logic.layout.table.tree.TreeTableNodeLabelNaming$Name.tooltip = <i>Model name</i> for the <i>tree table node label naming</i>.
 com.top_logic.layout.table.tree.TreeTableNodeLabelNaming.Name.component = Component
 com.top_logic.layout.table.tree.TreeTableNodeLabelNaming.Name.component.tooltip = Reference to the tree table.
 com.top_logic.layout.table.tree.TreeTableNodeLabelNaming.Name.path = Path
