--- a/com.top_logic/src/main/webapp/WEB-INF/conf/resources/Messages_en.properties
+++ b/com.top_logic/src/main/webapp/WEB-INF/conf/resources/Messages_en.properties
@@ -2338,6 +2338,8 @@ com.top_logic.layout.table.model.ColumnConfiguration.DisplayMode.hidden = [[[Opt
 com.top_logic.layout.table.model.ColumnConfiguration.DisplayMode.mandatory = [[[Verpflichtend]]]
 com.top_logic.layout.table.model.ColumnConfiguration.DisplayMode.visible = [[[Standardmäßig sichtbar]]]
 com.top_logic.layout.table.provider.ButtonColumnProvider$CommandInTableRowNaming$Name = Command {command-id} in column {column-id}
+com.top_logic.layout.table.tree.TreeTableNodeLabelNaming$Name = {foreach(path, " > ")}
+com.top_logic.layout.table.tree.TreeTableNodeLabelNaming$Name.tooltip = <i>Model name</i> for the <i>tree table node label naming</i>.
 com.top_logic.layout.tree.TreeDataName = tree data of {tree-data-owner}
 com.top_logic.layout.tree.breadcrumb.BreadcrumbDataName = breadcrumb of {breadcrumb-data-owner}
 com.top_logic.layout.tree.model.TLTreeNodeNaming = {name["businessObject"]}
