--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -6150,6 +6150,8 @@ com.top_logic.layout.table.tree.TreeTableComponent.Config.table.tooltip = <i>Kon
 com.top_logic.layout.table.tree.TreeTableComponent.Config.treeBuilder = Baumeister
 com.top_logic.layout.table.tree.TreeTableComponent.Config.treeBuilder.tooltip = <i>Tree Builder</i>, der den angezeigten Baum aus dem Business Model erstellt.
 com.top_logic.layout.table.tree.TreeTableComponent.tooltip = Eine <i>Komponente</i> zur Anzeige einer Tabelle mit einem Baummodell.
+com.top_logic.layout.table.tree.TreeTableComponentNodeLabelNaming$Name = Name
+com.top_logic.layout.table.tree.TreeTableComponentNodeLabelNaming$Name.tooltip = <i>Modellname</i> für die <i>Bezeichnung des Knotens der Komponente der Baumtabelle</i>.
 com.top_logic.layout.table.tree.TreeTableConfig = Konfiguration der Baumtabelle
 com.top_logic.layout.table.tree.TreeTableConfig.tooltip = <i>Konfiguration der Formulartabelle</i> durch Auswahl des <i>Baumtabellen-Kontextmenüanbieters</i> als Standard.
 com.top_logic.layout.table.tree.TreeTableContextMenuFactory = Baumtabelle Kontextmenü Fabrik
@@ -6158,8 +6160,6 @@ com.top_logic.layout.table.tree.TreeTableContextMenuProvider = Anbieter des Kont
 com.top_logic.layout.table.tree.TreeTableContextMenuProvider.tooltip = <i>Wählbarer Kontextmenü-Anbieter</i>, der das <i>Baumtabellen-Kontextmenü werkseitig</i> auswählt.
 com.top_logic.layout.table.tree.TreeTableExpandCollapseAll = Baumtabelle aufklappen alle einklappen
 com.top_logic.layout.table.tree.TreeTableExpandCollapseAll.tooltip = Erweitert alle Knoten in der <i>Baumtabellenkomponente</i>.
-com.top_logic.layout.table.tree.TreeTableNodeLabelNaming$Name = {foreach(path, " > ")}
-com.top_logic.layout.table.tree.TreeTableNodeLabelNaming$Name.tooltip = <i>Modellname</i> für die <i>Bezeichnung der Knoten in der Baumtabelle</i>.
 com.top_logic.layout.table.tree.TreeTableNodeLabelNaming.Name.component = Komponente
 com.top_logic.layout.table.tree.TreeTableNodeLabelNaming.Name.component.tooltip = Verweis auf die Baumtabelle.
 com.top_logic.layout.table.tree.TreeTableNodeLabelNaming.Name.path = Pfad
