Ticket #28588: add config option to FormTable to make the rows selectable or not

--- a/com.top_logic.layout.formeditor/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.layout.formeditor/src/main/java/META-INF/messages_de.properties
@@ -49,6 +49,8 @@ com.top_logic.layout.formeditor.parts.FormTableDefinition.label = Bezeichnung
 com.top_logic.layout.formeditor.parts.FormTableDefinition.label.tooltip = Gibt den Titel der Tabelle zurück. <p> Kann Platzhalter wie <code>{0}</code> enthalten. Wenn keine dynamische Bezeichnung konfiguriert ist, wird der Platzhalter mit dem Modell der Tabelle gefüllt. </p>
 com.top_logic.layout.formeditor.parts.FormTableDefinition.rows = Reihen
 com.top_logic.layout.formeditor.parts.FormTableDefinition.rows.tooltip = Ausdruck, der eine Liste von Objekten erstellt, die in der angezeigten Tabelle als Zeilen bearbeitet wurden.
+com.top_logic.layout.formeditor.parts.FormTableDefinition.selectable = Selektierbar
+com.top_logic.layout.formeditor.parts.FormTableDefinition.selectable.tooltip = Ob die Tabelle eine Zeilenselektion zulässt.
 com.top_logic.layout.formeditor.parts.FormTableTemplateProvider = Anbieter von Formular-Tabellenvorlagen
 com.top_logic.layout.formeditor.parts.FormTableTemplateProvider.tooltip = Erstellt eine Vorlage für eine <i>Formulartabellendefinition</i> und speichert die erforderlichen Informationen.
 com.top_logic.layout.formeditor.parts.MacroPart.expr = Ausdruck
