--- a/com.top_logic.layout.formeditor/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.layout.formeditor/src/main/java/META-INF/messages_en.properties
@@ -49,6 +49,8 @@ com.top_logic.layout.formeditor.parts.FormTableDefinition.label = Label
 com.top_logic.layout.formeditor.parts.FormTableDefinition.label.tooltip = Returns the title of the Table. <p> Can contain placeholders such as <code>{0}</code>. If no dynamic label is configured, the placeholder will be filled with the model of the table. </p>
 com.top_logic.layout.formeditor.parts.FormTableDefinition.rows = Rows
 com.top_logic.layout.formeditor.parts.FormTableDefinition.rows.tooltip = Expression creating a list of objects edited in the displayed table as rows.
+com.top_logic.layout.formeditor.parts.FormTableDefinition.selectable = Selectable
+com.top_logic.layout.formeditor.parts.FormTableDefinition.selectable.tooltip = Whether the table allows row selection.
 com.top_logic.layout.formeditor.parts.FormTableTemplateProvider = Form table template provider
 com.top_logic.layout.formeditor.parts.FormTableTemplateProvider.tooltip = Creates a template for a <i>form table definition</i> and stores the necessary information.
 com.top_logic.layout.formeditor.parts.MacroPart.expr = Expression
