Ticket #28679: add default option to static label
- can use placeholder that will be filled per default using the tables
model
- add new layout to demo to showcase dynamic label for FormTable

--- a/com.top_logic.layout.formeditor/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.layout.formeditor/src/main/java/META-INF/messages_en.properties
@@ -41,6 +41,8 @@ com.top_logic.layout.formeditor.parts.FormTableDefinition.dynamicLabel = Dynamic
 com.top_logic.layout.formeditor.parts.FormTableDefinition.dynamicLabel.tooltip = Expression creating a dynamic label for the table based on the model. <p> If this expression is configured, it takes precedence over the static <i>Label</i>. The expression receives two parameters: <ul> <li>First parameter: The model object</li> <li>Second parameter: The static label as <i>resource key</i></li> </ul> The returned value can be a <i>resource key</i> or a <i>string</i>, for example. </p>
 com.top_logic.layout.formeditor.parts.FormTableDefinition.form-field-name = Form field name
 com.top_logic.layout.formeditor.parts.FormTableDefinition.form-field-name.tooltip = Name of the form field that is created for this table.
+com.top_logic.layout.formeditor.parts.FormTableDefinition.label = Label
+com.top_logic.layout.formeditor.parts.FormTableDefinition.label.tooltip = Returns the title of the Table. <p> Can contain placeholders such as <code>{0}</code>. If no dynamic label is configured, the placeholder will be filled with the model of the table. </p>
 com.top_logic.layout.formeditor.parts.FormTableDefinition.rows = Rows
 com.top_logic.layout.formeditor.parts.FormTableDefinition.rows.tooltip = Expression creating a list of objects edited in the displayed table as rows.
 com.top_logic.layout.formeditor.parts.FormTableTemplateProvider = Form table template provider
