--- a/com.top_logic.element/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_de.properties
@@ -521,7 +521,7 @@ com.top_logic.element.layout.grid.GridTreeTableNode.GridTreeTableNodeNaming.Grid
 com.top_logic.element.layout.grid.GridTreeTableNode.GridTreeTableNodeNaming.GridNodeName.component.tooltip = Referenz auf die Context-Komponente.
 com.top_logic.element.layout.grid.GridTreeTableNode.GridTreeTableNodeNaming.GridNodeName.path = Pfad
 com.top_logic.element.layout.grid.GridTreeTableNode.GridTreeTableNodeNaming.GridNodeName.path.tooltip = Pfad von der Wurzel einer Baumgitteranzeige zu den referenzierten Knoten in Modellnamen für Geschäftsobjekte.
-com.top_logic.element.layout.grid.GridTreeTableNodeLabelNaming$GridNodeLabelName = Name der Bezeichnung des Gitterknoten
+com.top_logic.element.layout.grid.GridTreeTableNodeLabelNaming$GridNodeLabelName = {foreach(path, " > ")}
 com.top_logic.element.layout.grid.GridTreeTableNodeLabelNaming$GridNodeLabelName.tooltip = <i>Modellname</i> für die <i>Benennung der Knotenbeschriftung der Gitterbaum-Tabelle</i>.
 com.top_logic.element.layout.grid.GridTreeTableNodeResourceProvider = Grid-Baum-Tabellenknoten-Ressourcenanbieter
 com.top_logic.element.layout.grid.GridTreeTableNodeResourceProvider.tooltip = <i>Accessor</i> für <i>Gitterbaum-Tabellenknoten</i>.
