--- a/com.top_logic.element/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_en.properties
@@ -521,7 +521,7 @@ com.top_logic.element.layout.grid.GridTreeTableNode.GridTreeTableNodeNaming.Grid
 com.top_logic.element.layout.grid.GridTreeTableNode.GridTreeTableNodeNaming.GridNodeName.component.tooltip = Reference to the context component.
 com.top_logic.element.layout.grid.GridTreeTableNode.GridTreeTableNodeNaming.GridNodeName.path = Path
 com.top_logic.element.layout.grid.GridTreeTableNode.GridTreeTableNodeNaming.GridNodeName.path.tooltip = Path from the root of a tree grid display to the referenced nodes in model names for business objects.
-com.top_logic.element.layout.grid.GridTreeTableNodeLabelNaming$GridNodeLabelName = Grid node label name
+com.top_logic.element.layout.grid.GridTreeTableNodeLabelNaming$GridNodeLabelName = {foreach(path, " > ")}
 com.top_logic.element.layout.grid.GridTreeTableNodeLabelNaming$GridNodeLabelName.tooltip = <i>Model name</i> for the <i>grid tree table node label naming</i>.
 com.top_logic.element.layout.grid.GridTreeTableNodeResourceProvider = Grid tree table node resource provider
 com.top_logic.element.layout.grid.GridTreeTableNodeResourceProvider.tooltip = <i>Accessor</i> for <i>grid tree table nodes</i>.
