Ticket #28593: Moved labels of ModelNames to Java interfaces.

--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -6166,7 +6166,7 @@ com.top_logic.layout.table.tree.TreeTableComponent.Config.table.tooltip = <i>Kon
 com.top_logic.layout.table.tree.TreeTableComponent.Config.treeBuilder = Baumeister
 com.top_logic.layout.table.tree.TreeTableComponent.Config.treeBuilder.tooltip = <i>Tree Builder</i>, der den angezeigten Baum aus dem Business Model erstellt.
 com.top_logic.layout.table.tree.TreeTableComponent.tooltip = Eine <i>Komponente</i> zur Anzeige einer Tabelle mit einem Baummodell.
-com.top_logic.layout.table.tree.TreeTableComponentNodeLabelNaming$Name = Name
+com.top_logic.layout.table.tree.TreeTableComponentNodeLabelNaming$Name = {foreach(path, " > ")}
 com.top_logic.layout.table.tree.TreeTableComponentNodeLabelNaming$Name.tooltip = <i>Modellname</i> für die <i>Bezeichnung des Knotens der Komponente der Baumtabelle</i>.
 com.top_logic.layout.table.tree.TreeTableConfig = Konfiguration der Baumtabelle
 com.top_logic.layout.table.tree.TreeTableConfig.tooltip = <i>Konfiguration der Formulartabelle</i> durch Auswahl des <i>Baumtabellen-Kontextmenüanbieters</i> als Standard.
