--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -6166,7 +6166,7 @@ com.top_logic.layout.table.tree.TreeTableComponent.Config.table.tooltip = Tree <
 com.top_logic.layout.table.tree.TreeTableComponent.Config.treeBuilder = Tree builder
 com.top_logic.layout.table.tree.TreeTableComponent.Config.treeBuilder.tooltip = <i>Tree builder</i> creating the displayed tree from the business model.
 com.top_logic.layout.table.tree.TreeTableComponent.tooltip = A <i>component</i> for displaying a table with a tree model.
-com.top_logic.layout.table.tree.TreeTableComponentNodeLabelNaming$Name = Name
+com.top_logic.layout.table.tree.TreeTableComponentNodeLabelNaming$Name = {foreach(path, " > ")}
 com.top_logic.layout.table.tree.TreeTableComponentNodeLabelNaming$Name.tooltip = <i>Model name</i> for the <i>tree table component node label naming</i>.
 com.top_logic.layout.table.tree.TreeTableConfig = Tree table configuration
 com.top_logic.layout.table.tree.TreeTableConfig.tooltip = <i>Form table configuration</i> choosing <i>tree table context menu provider</i> by default.
