Ticket #28688: Allow to group object groups in a container group.

--- a/com.top_logic.layout.formeditor/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.layout.formeditor/src/main/java/META-INF/messages_en.properties
@@ -17,16 +17,20 @@ com.top_logic.layout.formeditor.parts.ForeignAttributeDefinition.item.tooltip = 
 com.top_logic.layout.formeditor.parts.ForeignAttributeTemplateProvider = Foreign attribute template provider
 com.top_logic.layout.formeditor.parts.ForeignAttributeTemplateProvider.tooltip = <i>Form element provider</i> for <i>foreign attribute definition</i>.
 com.top_logic.layout.formeditor.parts.ForeignObjects.buttons.tooltip = Commands that can be executed on the individual objects.
+com.top_logic.layout.formeditor.parts.ForeignObjects.id = ID
+com.top_logic.layout.formeditor.parts.ForeignObjects.id.tooltip = ID to make form context contents stable.
 com.top_logic.layout.formeditor.parts.ForeignObjects.items = Items
 com.top_logic.layout.formeditor.parts.ForeignObjects.items.tooltip = The items to display forms for.
 com.top_logic.layout.formeditor.parts.ForeignObjects.label = Label
 com.top_logic.layout.formeditor.parts.ForeignObjects.label.tooltip = Expression that is used to compute the label of the single form groups, from the base object of the form group.
 com.top_logic.layout.formeditor.parts.ForeignObjects.layout = Layout
 com.top_logic.layout.formeditor.parts.ForeignObjects.layout.tooltip = Definition of the layout that is used to display the single objects.
-com.top_logic.layout.formeditor.parts.ForeignObjects.no-separate-group = No separate group
-com.top_logic.layout.formeditor.parts.ForeignObjects.no-separate-group.tooltip = Defines that no separate groups should be displayed for the individual objects. In this case the elements are displayed inline in the outer form.
+com.top_logic.layout.formeditor.parts.ForeignObjects.no-separate-group = Embedd contents
+com.top_logic.layout.formeditor.parts.ForeignObjects.no-separate-group.tooltip = Whether fields of objects should be directly embedded into the rest of the form without any visual grouping. <p> This option is most likely only appropriate, if at most a single object is being displayed. This option then gives the impression that the fields of that object are fields of the surrounding object defining the rest of the form. </p>
 com.top_logic.layout.formeditor.parts.ForeignObjects.read-only = Display item attributes read-only
 com.top_logic.layout.formeditor.parts.ForeignObjects.read-only.tooltip = Expression that is used for each of the items to compute, whether the form elements must be displayed read-only instead of editable. <p> The first argument for the evaluation is the displayed item, the second is the base object, e.g. the expression 'true' displays all attributes read-only. </p> <p> When nothing is configured, no attribute is explicitly set to read-only. </p>
+com.top_logic.layout.formeditor.parts.ForeignObjects.title = Title
+com.top_logic.layout.formeditor.parts.ForeignObjects.title.tooltip = Title of group surrounding all object groups. <p> If not given, content groups are not surrounded by an extra group. </p>
 com.top_logic.layout.formeditor.parts.ForeignObjectsTemplateProvider = Foreign objects template provider
 com.top_logic.layout.formeditor.parts.ForeignObjectsTemplateProvider.tooltip = <i>Form element provider</i> for <i>foreign objects</i>.
 com.top_logic.layout.formeditor.parts.FormTableDefinition$AttributeColumn = Attribute column
