--- a/com.top_logic.layout.formeditor/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.layout.formeditor/src/main/java/META-INF/messages_de.properties
@@ -17,16 +17,20 @@ com.top_logic.layout.formeditor.parts.ForeignAttributeDefinition.item.tooltip = 
 com.top_logic.layout.formeditor.parts.ForeignAttributeTemplateProvider = Anbieter fremder Attributvorlagen
 com.top_logic.layout.formeditor.parts.ForeignAttributeTemplateProvider.tooltip = <i>Formularelementanbieter</i> für die <i>Definition von Fremdattributen</i>.
 com.top_logic.layout.formeditor.parts.ForeignObjects.buttons.tooltip = Befehle, die an den einzelnen Objekten ausgeführt werden können.
+com.top_logic.layout.formeditor.parts.ForeignObjects.id = ID
+com.top_logic.layout.formeditor.parts.ForeignObjects.id.tooltip = ID, um den Inhalt des Formularkontexts stabil zu machen.
 com.top_logic.layout.formeditor.parts.ForeignObjects.items = Punkte
 com.top_logic.layout.formeditor.parts.ForeignObjects.items.tooltip = Die Positionen, für die Formulare angezeigt werden sollen.
 com.top_logic.layout.formeditor.parts.ForeignObjects.label = Beschriftung
 com.top_logic.layout.formeditor.parts.ForeignObjects.label.tooltip = Ausdruck, der verwendet wird, um die Beschriftung der einzelnen Formulargruppen aus dem Basisobjekt der Formulargruppe zu berechnen.
 com.top_logic.layout.formeditor.parts.ForeignObjects.layout = Gestaltung
 com.top_logic.layout.formeditor.parts.ForeignObjects.layout.tooltip = Definition des Layouts, das zur Anzeige der einzelnen Objekte verwendet wird.
-com.top_logic.layout.formeditor.parts.ForeignObjects.no-separate-group = Keine separate Gruppe
-com.top_logic.layout.formeditor.parts.ForeignObjects.no-separate-group.tooltip = Legt fest, dass für die einzelnen Objekte keine separaten Gruppen angezeigt werden sollen. In diesem Fall werden die Elemente inline im äußeren Formular angezeigt.
+com.top_logic.layout.formeditor.parts.ForeignObjects.no-separate-group = Inhalte einbetten 
+com.top_logic.layout.formeditor.parts.ForeignObjects.no-separate-group.tooltip = Ob Felder von Objekten direkt in den Rest des Formulars eingebettet werden sollen, ohne dass eine visuelle Gruppierung erfolgt. <p> Diese Option ist höchstwahrscheinlich nur dann sinnvoll, wenn höchstens ein einzelnes Objekt angezeigt wird. Diese Option vermittelt dann den Eindruck, dass die Felder dieses Objekts Felder des umgebenden Objekts sind, das den Rest des Formulars definiert. </p>
 com.top_logic.layout.formeditor.parts.ForeignObjects.read-only = Objekt Attribute schreibgeschützt anzeigen
 com.top_logic.layout.formeditor.parts.ForeignObjects.read-only.tooltip = Ausdruck, der für jedes der Elemente verwendet wird, um zu berechnen, ob die Formularelemente schreibgeschützt statt editierbar angezeigt werden müssen. <p> Das erste Argument für die Auswertung ist das angezeigte Element, das zweite ist das Basisobjekt, z.B. zeigt der Ausdruck 'true' alle Attribute schreibgeschützt an. </p> <p> Wenn nichts konfiguriert ist, wird kein Attribut explizit auf schreibgeschützt gesetzt. </p>
+com.top_logic.layout.formeditor.parts.ForeignObjects.title = Titel
+com.top_logic.layout.formeditor.parts.ForeignObjects.title.tooltip = Titel der Gruppe, die alle Objektgruppen umgibt. <p> Wenn nicht angegeben, werden die Inhaltsgruppen nicht von einer zusätzlichen Gruppe umgeben. </p>
 com.top_logic.layout.formeditor.parts.ForeignObjectsTemplateProvider = Anbieter von Fremdkörpervorlagen
 com.top_logic.layout.formeditor.parts.ForeignObjectsTemplateProvider.tooltip = <i>Formularelementanbieter</i> für <i>Fremdkörper</i>.
 com.top_logic.layout.formeditor.parts.FormTableDefinition$AttributeColumn = Attribut-Spalte
