Ticket #28688: Allow object groups to be initially collapsed.

--- a/com.top_logic.layout.formeditor/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.layout.formeditor/src/main/java/META-INF/messages_en.properties
@@ -19,6 +19,8 @@ com.top_logic.layout.formeditor.parts.ForeignAttributeTemplateProvider.tooltip =
 com.top_logic.layout.formeditor.parts.ForeignObjects.buttons.tooltip = Commands that can be executed on the individual objects.
 com.top_logic.layout.formeditor.parts.ForeignObjects.id = ID
 com.top_logic.layout.formeditor.parts.ForeignObjects.id.tooltip = ID to make form context contents stable.
+com.top_logic.layout.formeditor.parts.ForeignObjects.initially-collapsed = Initially collapsed
+com.top_logic.layout.formeditor.parts.ForeignObjects.initially-collapsed.tooltip = Whether to collapse all object groups during initial display. <p> Has no meaning, if <i>embedd contents</i> is active. </p>
 com.top_logic.layout.formeditor.parts.ForeignObjects.items = Items
 com.top_logic.layout.formeditor.parts.ForeignObjects.items.tooltip = The items to display forms for.
 com.top_logic.layout.formeditor.parts.ForeignObjects.label = Label
