Ticket #28688: Ability to add additional commands to the group title.

--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -2969,8 +2969,9 @@ com.top_logic.layout.form.boxes.reactive_tag.DescriptionCellControl.labelStyle =
 com.top_logic.layout.form.boxes.reactive_tag.DescriptionCellControl.labelWidth = Die CSS-Breite der ersten Spalte der Zelle. Standardmäßig ist dies die Zelle für die Bezeichnung.
 com.top_logic.layout.form.boxes.reactive_tag.DescriptionCellControl.wholeLine = Ob die Eingabezelle die gesamte Formularbreite umfassen soll, auch wenn das Formular ein mehrspaltiges Layout hat.
 com.top_logic.layout.form.boxes.reactive_tag.GroupCellControl.collapsed = Gibt an, ob die Gruppe derzeit im minimierten Zustand angezeigt wird.
+com.top_logic.layout.form.boxes.reactive_tag.GroupCellControl.commands = Zusätzliche Befehle, die in der Titelleiste angezeigt werden (einschließlich der Schaltfläche zum Öffnen eines möglichen Menüs).
 com.top_logic.layout.form.boxes.reactive_tag.GroupCellControl.content = Der Inhalt der Gruppe.
-com.top_logic.layout.form.boxes.reactive_tag.GroupCellControl.menuButton = Die Schaltfläche zum Öffnen eines Menüs, das zusätzliche Befehle enthält.
+com.top_logic.layout.form.boxes.reactive_tag.GroupCellControl.hasCommands = Ob es zusätzliche Befehle in der Kopfzeile gibt.
 com.top_logic.layout.form.boxes.reactive_tag.GroupCellControl.onclick = Skript, das den auf-/zugeklappten Zustand der Gruppe umschaltet, wenn auf die Kopfzeile der Gruppe geklickt wird.
 com.top_logic.layout.form.boxes.reactive_tag.GroupCellControl.ondblclick = Skript, das den Toggle-Klick verhindert, wenn die Kopfzeile einen Doppelklick erhält.
 com.top_logic.layout.form.boxes.reactive_tag.GroupCellControl.title = Titel der Gruppe.
@@ -2982,8 +2983,7 @@ com.top_logic.layout.form.boxes.reactive_tag.GroupSettings.dataId = Die Daten-ID
 com.top_logic.layout.form.boxes.reactive_tag.GroupSettings.draggable = Ob die Gruppe verschiebbar ist.
 com.top_logic.layout.form.boxes.reactive_tag.GroupSettings.hasBorder = Ob ein Rahmen um die Gruppenzelle gezeichnet werden soll. Der Standardwert wird vom Theme vorgegeben.
 com.top_logic.layout.form.boxes.reactive_tag.GroupSettings.hasLegend = Ob die Gruppenzelle eine Legende hat, die wiedergegeben werden soll.
-com.top_logic.layout.form.boxes.reactive_tag.GroupSettings.hasMenu = Ob es ein Menü gibt.
-com.top_logic.layout.form.boxes.reactive_tag.GroupSettings.menuButton = Das <i>Symbol</i> zum Öffnen des Menüs.
+com.top_logic.layout.form.boxes.reactive_tag.GroupSettings.isContainer = Ob diese Gruppe ein reiner Container für andere Gruppen ist. <p> Ein Gruppencontainer hat verschiedene visuelle Eigenschaften, die ihn von seinen Inhaltsgruppen unterscheiden. </p>
 com.top_logic.layout.form.boxes.reactive_tag.GroupSettings.rows = Die Anzahl der Zeilen, über die sich die Gruppe erstrecken soll.
 com.top_logic.layout.form.boxes.reactive_tag.GroupSettings.style = CSS-Stil, der der Gruppenzelle hinzugefügt werden soll.
 com.top_logic.layout.form.boxes.reactive_tag.GroupSettings.wholeLine = Ob die Formulargruppe über die gesamte Zeile gerendert wird, auch wenn sie sich in einem mehrspaltigen Container befindet.
