--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -2969,8 +2969,9 @@ com.top_logic.layout.form.boxes.reactive_tag.DescriptionCellControl.labelStyle =
 com.top_logic.layout.form.boxes.reactive_tag.DescriptionCellControl.labelWidth = The CSS width of the first column of the cell. By default its the cell for the label.
 com.top_logic.layout.form.boxes.reactive_tag.DescriptionCellControl.wholeLine = Whether the input cell should span the whole form width, even if the form has a multi-column layout.
 com.top_logic.layout.form.boxes.reactive_tag.GroupCellControl.collapsed = Whether the group is currently displayed in minimized state.
+com.top_logic.layout.form.boxes.reactive_tag.GroupCellControl.commands = Additional commands displayed in the title bar (including the opening button for a potential menu).
 com.top_logic.layout.form.boxes.reactive_tag.GroupCellControl.content = The HTML contents of the group.
-com.top_logic.layout.form.boxes.reactive_tag.GroupCellControl.menuButton = The menu button to open a context menu displaying additional commands.
+com.top_logic.layout.form.boxes.reactive_tag.GroupCellControl.hasCommands = Whether there are additional commands in the header.
 com.top_logic.layout.form.boxes.reactive_tag.GroupCellControl.onclick = Script that toggles the expand/collapsed state of the group when the group header is clicked.
 com.top_logic.layout.form.boxes.reactive_tag.GroupCellControl.ondblclick = Script that prevents the toggle click, if the header receives a double click.
 com.top_logic.layout.form.boxes.reactive_tag.GroupCellControl.title = Title of the group.
@@ -2982,8 +2983,7 @@ com.top_logic.layout.form.boxes.reactive_tag.GroupSettings.dataId = The data ID 
 com.top_logic.layout.form.boxes.reactive_tag.GroupSettings.draggable = Whether the group is draggable.
 com.top_logic.layout.form.boxes.reactive_tag.GroupSettings.hasBorder = Whether a border should be drawn around the group cell. The default value is provided by the theme.
 com.top_logic.layout.form.boxes.reactive_tag.GroupSettings.hasLegend = Whether the group cell has a legend to be rendered.
-com.top_logic.layout.form.boxes.reactive_tag.GroupSettings.hasMenu = Whether there is a menu.
-com.top_logic.layout.form.boxes.reactive_tag.GroupSettings.menuButton = The <i>icon</i> to open the menu.
+com.top_logic.layout.form.boxes.reactive_tag.GroupSettings.isContainer = Whether this group is a pure container of other groups. <p> A group container has different visual properties that sets it apart from its content groups. </p>
 com.top_logic.layout.form.boxes.reactive_tag.GroupSettings.rows = The number of rows over which the group should stretch.
 com.top_logic.layout.form.boxes.reactive_tag.GroupSettings.style = CSS style to add to the generated group cell.
 com.top_logic.layout.form.boxes.reactive_tag.GroupSettings.wholeLine = Whether the form group is rendered over the whole line, even when it is in a multi-column container.
