Ticket #28679: update Documentation

--- a/com.top_logic.element/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_de.properties
@@ -409,7 +409,7 @@ com.top_logic.element.layout.formeditor.definition.TLFormDefinition.tooltip = Ei
 com.top_logic.element.layout.formeditor.definition.TabbarDefinition.tabs = Registerkarten
 com.top_logic.element.layout.formeditor.definition.TabbarDefinition.tabs.tooltip = Die Registerkarten, die andere <i>Formularelemente</i> gruppieren. <p> Nur die <i>Formularelemente</i> eines einzelnen Registers sind gemeinsam sichtbar. </p>
 com.top_logic.element.layout.formeditor.definition.TextDefinition.label = Beschriftung
-com.top_logic.element.layout.formeditor.definition.TextDefinition.label.tooltip = Gibt das Label (den Titel) der Gruppe zurück.
+com.top_logic.element.layout.formeditor.definition.TextDefinition.label.tooltip = Bezeichnung (Titel) der Gruppe.
 com.top_logic.element.layout.formeditor.definition.TitleDefinition.level = Ebene
 com.top_logic.element.layout.formeditor.definition.TitleDefinition.level.tooltip = Gibt die Ebene der Überschrift für das HTML-Tag zurück.
 com.top_logic.element.layout.formeditor.definition.WithUUID.uuid = Uuid
