--- a/com.top_logic.element/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_en.properties
@@ -409,7 +409,7 @@ com.top_logic.element.layout.formeditor.definition.TLFormDefinition.tooltip = A 
 com.top_logic.element.layout.formeditor.definition.TabbarDefinition.tabs = Tabs
 com.top_logic.element.layout.formeditor.definition.TabbarDefinition.tabs.tooltip = The tabs grouping other <i>form elements</i>. <p> Only the <i>form elements</i> of a single tab are visible together. </p>
 com.top_logic.element.layout.formeditor.definition.TextDefinition.label = Label
-com.top_logic.element.layout.formeditor.definition.TextDefinition.label.tooltip = Returns the label (title) of the group.
+com.top_logic.element.layout.formeditor.definition.TextDefinition.label.tooltip = Label (title) of the group.
 com.top_logic.element.layout.formeditor.definition.TitleDefinition.level = Level
 com.top_logic.element.layout.formeditor.definition.TitleDefinition.level.tooltip = Returns the level of the heading for the HTML-tag.
 com.top_logic.element.layout.formeditor.definition.WithUUID.uuid = Uuid
